k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-service
spec:
  selector:
    app: auction-app
  ports:
    - protocol: TCP
      port: 6003
      targetPort: 6003
      nodePort: 30003 # Porta externa para acessar do host
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - protocol: TCP
      port: 8080
